FullUpdate/Grammar/FullUpdateParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/runner/work/Tapl/Tapl/FullUpdate/Grammar/FullUpdate.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class FullUpdateParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		TYPE=1, INERT=2, IF=3, THEN=4, ELSE=5, TRUE=6, FALSE=7, BOOL=8, AS=9, 
		LAMBDA=10, LET=11, IN=12, FIX=13, LETREC=14, ALL=15, SOME=16, USTRING=17, 
		UNIT=18, UUNIT=19, TIMESFLOAT=20, UFLOAT=21, SUCC=22, PRED=23, ISZERO=24, 
		NAT=25, TTOP=26, STRINGV=27, USCORE=28, APOSTROPHE=29, DQUOTE=30, BANG=31, 
		HASH=32, TRIANGLE=33, STAR=34, VBAR=35, DOT=36, SEMI=37, COMMA=38, SLASH=39, 
		COLON=40, COLONCOLON=41, EQ=42, EQEQ=43, LSQUARE=44, LT=45, LCURLY=46, 
		LPAREN=47, LEFTARROW=48, LEQ=49, LCURLYBAR=50, LSQUAREBAR=51, RCURLY=52, 
		RPAREN=53, RSQUARE=54, GT=55, BARRCURLY=56, BARGT=57, BARRSQUARE=58, COLONEQ=59, 
		ARROW=60, DARROW=61, DDARROW=62, FLOATV=63, INTV=64, UCID=65, LCID=66, 
		WS=67, COMMENT=68;
	public const int
		RULE_toplevel = 0, RULE_command = 1, RULE_binder = 2, RULE_tybinder = 3, 
		RULE_tyabbargs = 4, RULE_kind = 5, RULE_akind = 6, RULE_okind = 7, RULE_type = 8, 
		RULE_otype = 9, RULE_arrowtype = 10, RULE_apptype = 11, RULE_atype = 12, 
		RULE_fieldtypes = 13, RULE_nefieldtypes = 14, RULE_fieldtype = 15, RULE_term = 16, 
		RULE_appterm = 17, RULE_ascribeterm = 18, RULE_pathterm = 19, RULE_termseq = 20, 
		RULE_aterm = 21, RULE_fields = 22, RULE_nefields = 23, RULE_field = 24;
	public static readonly string[] ruleNames = {
		"toplevel", "command", "binder", "tybinder", "tyabbargs", "kind", "akind", 
		"okind", "type", "otype", "arrowtype", "apptype", "atype", "fieldtypes", 
		"nefieldtypes", "fieldtype", "term", "appterm", "ascribeterm", "pathterm", 
		"termseq", "aterm", "fields", "nefields", "field"
	};

	private static readonly string[] _LiteralNames = {
		null, "'type'", "'inert'", "'if'", "'then'", "'else'", "'true'", "'false'", 
		"'Bool'", "'as'", "'lambda'", "'let'", "'in'", "'fix'", "'letrec'", "'All'", 
		"'Some'", "'String'", "'unit'", "'Unit'", "'timesfloat'", "'Float'", "'succ'", 
		"'pred'", "'iszero'", "'Nat'", "'Top'", null, "'_'", "'''", "'\"'", "'!'", 
		"'#'", "'$'", "'*'", "'|'", "'.'", "';'", "','", "'/'", "':'", "'::'", 
		"'='", "'=='", "'['", "'<'", "'{'", "'('", "'<-'", "'<:'", "'{|'", "'[|'", 
		"'}'", "')'", "']'", "'>'", "'|}'", "'|>'", "'|]'", "':='", "'->'", "'=>'", 
		"'==>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "TYPE", "INERT", "IF", "THEN", "ELSE", "TRUE", "FALSE", "BOOL", 
		"AS", "LAMBDA", "LET", "IN", "FIX", "LETREC", "ALL", "SOME", "USTRING", 
		"UNIT", "UUNIT", "TIMESFLOAT", "UFLOAT", "SUCC", "PRED", "ISZERO", "NAT", 
		"TTOP", "STRINGV", "USCORE", "APOSTROPHE", "DQUOTE", "BANG", "HASH", "TRIANGLE", 
		"STAR", "VBAR", "DOT", "SEMI", "COMMA", "SLASH", "COLON", "COLONCOLON", 
		"EQ", "EQEQ", "LSQUARE", "LT", "LCURLY", "LPAREN", "LEFTARROW", "LEQ", 
		"LCURLYBAR", "LSQUAREBAR", "RCURLY", "RPAREN", "RSQUARE", "GT", "BARRCURLY", 
		"BARGT", "BARRSQUARE", "COLONEQ", "ARROW", "DARROW", "DDARROW", "FLOATV", 
		"INTV", "UCID", "LCID", "WS", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FullUpdate.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FullUpdateParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FullUpdateParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FullUpdateParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ToplevelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command() {
			return GetRuleContext<CommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(FullUpdateParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ToplevelContext toplevel() {
			return GetRuleContext<ToplevelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FullUpdateParser.Eof, 0); }
		public ToplevelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_toplevel; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToplevel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ToplevelContext toplevel() {
		ToplevelContext _localctx = new ToplevelContext(Context, State);
		EnterRule(_localctx, 0, RULE_toplevel);
		try {
			State = 55;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INERT:
			case IF:
			case TRUE:
			case FALSE:
			case LAMBDA:
			case LET:
			case FIX:
			case LETREC:
			case UNIT:
			case TIMESFLOAT:
			case SUCC:
			case PRED:
			case ISZERO:
			case STRINGV:
			case LCURLY:
			case LPAREN:
			case FLOATV:
			case INTV:
			case UCID:
			case LCID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 50;
				command();
				State = 51;
				Match(SEMI);
				State = 52;
				toplevel();
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				State = 54;
				Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
	 
		public CommandContext() { }
		public virtual void CopyFrom(CommandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Command_binderContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCID() { return GetToken(FullUpdateParser.LCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BinderContext binder() {
			return GetRuleContext<BinderContext>(0);
		}
		public Command_binderContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_binder(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Command_somebindContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLY() { return GetToken(FullUpdateParser.LCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UCID() { return GetToken(FullUpdateParser.UCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(FullUpdateParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCID() { return GetToken(FullUpdateParser.LCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCURLY() { return GetToken(FullUpdateParser.RCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(FullUpdateParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Command_somebindContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_somebind(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Command_termContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Command_termContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_term(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Command_tybinderContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UCID() { return GetToken(FullUpdateParser.UCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TybinderContext tybinder() {
			return GetRuleContext<TybinderContext>(0);
		}
		public Command_tybinderContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_tybinder(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 2, RULE_command);
		try {
			State = 69;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				_localctx = new Command_somebindContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 57;
				Match(LCURLY);
				State = 58;
				Match(UCID);
				State = 59;
				Match(COMMA);
				State = 60;
				Match(LCID);
				State = 61;
				Match(RCURLY);
				State = 62;
				Match(EQ);
				State = 63;
				term();
				}
				break;
			case 2:
				_localctx = new Command_tybinderContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 64;
				Match(UCID);
				State = 65;
				tybinder();
				}
				break;
			case 3:
				_localctx = new Command_binderContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 66;
				Match(LCID);
				State = 67;
				binder();
				}
				break;
			case 4:
				_localctx = new Command_termContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 68;
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BinderContext : ParserRuleContext {
		public BinderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_binder; } }
	 
		public BinderContext() { }
		public virtual void CopyFrom(BinderContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Binder_termContext : BinderContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(FullUpdateParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Binder_termContext(BinderContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinder_term(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Binder_typeContext : BinderContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(FullUpdateParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public Binder_typeContext(BinderContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinder_type(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BinderContext binder() {
		BinderContext _localctx = new BinderContext(Context, State);
		EnterRule(_localctx, 4, RULE_binder);
		try {
			State = 75;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case COLON:
				_localctx = new Binder_typeContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 71;
				Match(COLON);
				State = 72;
				type();
				}
				break;
			case EQ:
				_localctx = new Binder_termContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 73;
				Match(EQ);
				State = 74;
				term();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TybinderContext : ParserRuleContext {
		public TybinderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tybinder; } }
	 
		public TybinderContext() { }
		public virtual void CopyFrom(TybinderContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Tybinder_knContext : TybinderContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLONCOLON() { return GetToken(FullUpdateParser.COLONCOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public KindContext kind() {
			return GetRuleContext<KindContext>(0);
		}
		public Tybinder_knContext(TybinderContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTybinder_kn(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Tybinder_abbtypeContext : TybinderContext {
		[System.Diagnostics.DebuggerNonUserCode] public TyabbargsContext tyabbargs() {
			return GetRuleContext<TyabbargsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(FullUpdateParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public Tybinder_abbtypeContext(TybinderContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTybinder_abbtype(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Tybinder_leqContext : TybinderContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEQ() { return GetToken(FullUpdateParser.LEQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public Tybinder_leqContext(TybinderContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTybinder_leq(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Tybinder_emptyContext : TybinderContext {
		public Tybinder_emptyContext(TybinderContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTybinder_empty(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TybinderContext tybinder() {
		TybinderContext _localctx = new TybinderContext(Context, State);
		EnterRule(_localctx, 6, RULE_tybinder);
		try {
			State = 86;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case COLONCOLON:
				_localctx = new Tybinder_knContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 77;
				Match(COLONCOLON);
				State = 78;
				kind();
				}
				break;
			case LEQ:
				_localctx = new Tybinder_leqContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 79;
				Match(LEQ);
				State = 80;
				type();
				}
				break;
			case EQ:
			case UCID:
				_localctx = new Tybinder_abbtypeContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 81;
				tyabbargs();
				State = 82;
				Match(EQ);
				State = 83;
				type();
				}
				break;
			case SEMI:
				_localctx = new Tybinder_emptyContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TyabbargsContext : ParserRuleContext {
		public TyabbargsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tyabbargs; } }
	 
		public TyabbargsContext() { }
		public virtual void CopyFrom(TyabbargsContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Tyabbargs_emptyContext : TyabbargsContext {
		public Tyabbargs_emptyContext(TyabbargsContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTyabbargs_empty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Tyabbargs_ucidContext : TyabbargsContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UCID() { return GetToken(FullUpdateParser.UCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public OkindContext okind() {
			return GetRuleContext<OkindContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TyabbargsContext tyabbargs() {
			return GetRuleContext<TyabbargsContext>(0);
		}
		public Tyabbargs_ucidContext(TyabbargsContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTyabbargs_ucid(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TyabbargsContext tyabbargs() {
		TyabbargsContext _localctx = new TyabbargsContext(Context, State);
		EnterRule(_localctx, 8, RULE_tyabbargs);
		try {
			State = 93;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case UCID:
				_localctx = new Tyabbargs_ucidContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 88;
				Match(UCID);
				State = 89;
				okind();
				State = 90;
				tyabbargs();
				}
				break;
			case EQ:
				_localctx = new Tyabbargs_emptyContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class KindContext : ParserRuleContext {
		public KindContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_kind; } }
	 
		public KindContext() { }
		public virtual void CopyFrom(KindContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Kind_akindContext : KindContext {
		[System.Diagnostics.DebuggerNonUserCode] public AkindContext akind() {
			return GetRuleContext<AkindContext>(0);
		}
		public Kind_akindContext(KindContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitKind_akind(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Kind_darrowContext : KindContext {
		[System.Diagnostics.DebuggerNonUserCode] public AkindContext akind() {
			return GetRuleContext<AkindContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DARROW() { return GetToken(FullUpdateParser.DARROW, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public KindContext kind() {
			return GetRuleContext<KindContext>(0);
		}
		public Kind_darrowContext(KindContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullUpdateVisitor<TResult> typedVisitor = visitor as IFullUpdateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitKind_darrow(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public KindContext kind() {
		KindContext _localctx = new KindContext(Context, State);
		EnterRule(_localctx, 10, RULE_kind);
		try {
			State = 100;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				_localctx = new Kind_darrowContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 95;
				akind();
				State = 96;
				Match(DARROW);
				State = 97;
				kind();
				}
				break;
			case 2:
				_localctx = new Kind_akindContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 99;
				akind();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
